# voting_machine

./: .gitignore  Cargo.toml  audit_trail.csv  ballot.csv  candidates.csv  casted_ballots.csv  elections.csv  offices.csv  registered_voters.csv  users.csv  votes.csv
assets/: session_audit.py
src/: authenticate_admin.rs  cast_vote.rs  close_election.rs  create_ballot.rs  main.rs  models.rs  open_election.rs  save_ballot.rs  signup_user.rs  tally_votes.rs  test.rs  voter_registration.rs
