[package]
name = "voting_machine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
argon2 = "0.5.3"
rand = "0.8.5"
regex = "1.10.4"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.11.3"
log = "0.4.21"
log4rs = "1.3.0"
chrono-wasi07 = "0.4.10"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
]
